<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
     
     Modified by Joe Smallman April 2012 to make appropriate for serial
 	 communication with Arduino device
-->
<resources>

    <!--  Main activity -->
    <string name="hello">Hello World, ArduinoBTComActivity!</string>
    <string name="edittext_hint">Enter text to send to Arduino</string>
    <string name="button_send">Send</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="bt_enabled">Bluetooth enabled</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabled</string>
	<string name="connect">connect</string>
	<string name="connecting">connecting</string>
	<string name="connected">connected</string>
	<string name="not_connected">not connected</string>
    
    <!--  Options Menu -->
    <string name="connection">Connection</string>
    <string name="scan_connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    
    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="app_name">Serial Plot</string>
    <string name="data">Data</string>
    <string name="data_save">save</string>
    <string name="data_clear">clear</string>
    <string name="plot">Plot</string>
    <string name="plot_load">load</string>
    <string name="plot_settings">settings</string>
    <string name="select_file">Select file to plot</string>
    <string name="file_save_error">Error saving data</string>
    <string name="file_saved">Data saved to file</string>
    
    
</resources>